hphp/hack/test/typecheck/new_inference/typehole/lambda_with_invoke.php.exp
File "lambda_with_invoke.php", line 21, characters 36-37:
Was expecting an object but type is unknown (Typing[4297])
File "lambda_with_invoke.php", line 21, characters 15-27:
It is unknown because a type could not be determined here
File "lambda_with_invoke.php", line 14, characters 49-49:
  via this generic T
